# secret-ai-contracts

./: .gitignore
subscription-manager/: .gitignore  Cargo.toml  Makefile  Readme.md
subscription-manager/integration_python_tests/: deactivate_subscriber.py  node_height(ping chain).py  query_subscriber_status.py  register_subscriber.py  set_admin.py  store_code_test.py
subscription-manager/node/: package-lock.json  package.json  queryContactInfo.js  upload.js
subscription-manager/schema/: execute_msg.json  query_msg.json  subscriber_status_response.json
subscription-manager/src/: contract.rs  msg.rs  state.rs
worker-manager/: Cargo.toml  Makefile  NOTICE  Readme.md
worker-manager/integration-tests/: .env  modify_worker.py  query_list_of_workers.py  register_worker.py
worker-manager/schema/: execute_msg.json  get_liveliness_challenge_response.json  get_next_worker_response.json  query_msg.json  state.json
worker-manager/src/: contract.rs  msg.rs  state.rs
