[package]
name = "claive_subscription_manager"
version = "0.1.0"
authors = ["Ilya <ilya@scrtlabs.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
secret-toolkit = { version = "0.10.0", default-features = false, features = [
#    "utils",
    "storage",
#    "serialization",
#    "viewing-key",
#    "permit",
] }
getrandom = { version = "0.2.15", features = ["js"]}
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
serde-json-wasm = "1.0.0"
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
hex = "0.4.3"
sha2 = "0.10.8"
k256 = "0.13.4"
secp256k1 = "0.30.0"

# Uncomment these for some common extra tools
# secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0" }
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[[bin]]
name = "schema"
required-features = ["schema"]
